--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  issues:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,11 +24,15 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+    #- name: Run a one-line script
+    #  run: echo "${{ env.GITHUB_EVENT_PATH }}"
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Run multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        env
+        echo pwd
+        pwd
+        echo env.GITHUB_EVENT_PATH
+        echo ${{ env.GITHUB_EVENT_PATH }}
+        ls ${{ env.GITHUB_EVENT_PATH }}
