--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,43 +1,37 @@
-# This is a basic workflow to help you get started with Actions
+# Workflow to kick off a cross component build
+# It creates a branch with a generated action
 
 name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
   issues:
+    types: [opened, edited, reopened]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    
+    - name: Create branch
+      run: |
+        echo hello
+        BRANCH=branch-${{ github.event.issue.number }}
+        git checkout -b "${BRANCH}"
+        git branch
 
     # Runs a set of commands using the runners shell
-    - name: Env
-      run: env
+    # - name: Env
+    #   run: env
       
-    - name: Output GITHUB_EVENT_PATH
-      run: |
-        cat $GITHUB_EVENT_PATH
-    
-    - name: use github event
-      run: |
-        echo ${{ github.event.issue.number }}
-        echo "${{ github.event.issue.body }}"
-
-#    - name: Construct job
-#      uses: gr2m/get-json-paths-action@v1.x
-#      with:
-#        json: ${{ steps.action_with_json_output.outputs.data }}
-#        issue_body:
+    # - name: Output GITHUB_EVENT_PATH
+    #   run: |
+    #     cat $GITHUB_EVENT_PATH
+    #
+    # - name: use github event
+    #   run: |
+    #     echo ${{ github.event.issue.number }}
+    #     echo "${{ github.event.issue.body }}"
