--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,16 @@ jobs:
     
     - name: Create branch
       run: |
-        echo hello
+        git branch
         BRANCH=branch-${{ github.event.issue.number }}
         git checkout -b "${BRANCH}"
-        git branch
+        git config --global user.email "ci@example.com"
+        git config --global user.name "CI Action"
+        
+        echo test-123 > tmp.txt
+        git add -A
+        git commit -m "Add file"
+        git push --force origin "${BRANCH}"
 
     # Runs a set of commands using the runners shell
     # - name: Env
