--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+
+    - uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+
+    - name: Build with Maven
+      run: |
+        mvn -B package
+
     - name: Create branch
       run: |
         git branch
@@ -23,8 +39,8 @@ jobs:
         git checkout -b "${BRANCH}"
         git config --global user.email "ci@example.com"
         git config --global user.name "CI Action"
-        
-        echo test-123 > tmp.txt
+        echo "${{ github.event.issue.body }}" > config.yml
+        java -jar target/ci-tool.jar --workflow-dir=.github/workflows --yaml=config.yml --issue=${{ github.event.issue.number }} --branch=$BRANCH
         git add -A
         git commit -m "Add file"
         git push --force origin "${BRANCH}"
