--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - uses: actions/cache@v1
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+        # The personal access token must be something which has the workflow permissions
+        # (I also used repo, admin:repo_hook and user)
+        token: ${{ secrets.CI_PAT }}
+
+# Cache is not usable with issues events
+#    - uses: actions/cache@v1
+#      with:
+#        path: ~/.m2/repository
+#        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+#        restore-keys: |
+#          ${{ runner.os }}-maven-
 
     - name: Set up JDK 11
       uses: actions/setup-java@v1
@@ -44,16 +49,3 @@ jobs:
         git add -A
         git commit -m "Add file"
         git push --force origin "${BRANCH}"
-
-    # Runs a set of commands using the runners shell
-    # - name: Env
-    #   run: env
-      
-    # - name: Output GITHUB_EVENT_PATH
-    #   run: |
-    #     cat $GITHUB_EVENT_PATH
-    #
-    # - name: use github event
-    #   run: |
-    #     echo ${{ github.event.issue.number }}
-    #     echo "${{ github.event.issue.body }}"
