--- a/.github/workflows/ci-4.yml
+++ b/.github/workflows/ci-4.yml
@@ -1,6 +1,6 @@
-name: Another test
+name: Kabir's test
 'on':
-  push: {branches: branch-4}
+  push: {branches: quick-branch}
 env: {MAVEN_OPTS: -Xms756M -Xmx1g, VALUE1: value1}
 jobs:
   build-xnio:
@@ -10,8 +10,7 @@ jobs:
     - uses: actions/checkout@v2
       with: {repository: xnio/xnio, ref: '3.8'}
     - uses: actions/cache@v1
-      with: {path: ~/.m2/repository, key: '${{ runner.os }}-maven-${{ hashFiles(''**/pom.xml'')
-          }}', restore-keys: '${{ runner.os }}-maven-'}
+      with: {path: ~/.m2/repository, key: '${{ runner.os }}-maven-${{ hashFiles(''**/pom.xml'')          }}', restore-keys: '${{ runner.os }}-maven-'}
     - uses: actions/setup-java@v1
       with: {java-version: '11'}
     - name: Grab project version
@@ -23,7 +22,7 @@ jobs:
         echo "${TMP}" > .project_versions/xnio
     - uses: actions/upload-artifact@v1
       with: {name: version-xnio, path: .project_versions/xnio}
-    - {name: Build with Maven, run: mvn -B install -DskipTests}
+    - {name: Build with Maven, run: 'mvn -B install -DskipTests '}
   build-jboss-remoting:
     name: jboss-remoting
     runs-on: ubuntu-latest
@@ -32,8 +31,7 @@ jobs:
     - uses: actions/checkout@v2
       with: {repository: jboss-remoting/jboss-remoting, ref: '5.0'}
     - uses: actions/cache@v1
-      with: {path: ~/.m2/repository, key: '${{ runner.os }}-maven-${{ hashFiles(''**/pom.xml'')
-          }}', restore-keys: '${{ runner.os }}-maven-'}
+      with: {path: ~/.m2/repository, key: '${{ runner.os }}-maven-${{ hashFiles(''**/pom.xml'')          }}', restore-keys: '${{ runner.os }}-maven-'}
     - uses: actions/setup-java@v1
       with: {java-version: '11'}
     - uses: actions/download-artifact@v1
@@ -52,4 +50,4 @@ jobs:
         echo "${TMP}" > .project_versions/jboss-remoting
     - uses: actions/upload-artifact@v1
       with: {name: version-jboss-remoting, path: .project_versions/jboss-remoting}
-    - {name: Build with Maven, run: 'mvn -B install -DskipTests -Dxnio.version="${VERSION_xnio}"'}
+    - {name: Build with Maven, run: 'mvn -B install -DskipTests  -Dxnio.version="${VERSION_xnio}"'}
