--- a/src/test/resources/org/wildfly/util/maven/snapshot/ci/config/__throwaway.yml
+++ b/src/test/resources/org/wildfly/util/maven/snapshot/ci/config/__throwaway.yml
@@ -1,20 +1,20 @@
-name: Kabir's test
+name: XNIO and Remoting
 env:
   MAVEN_OPTS: -Xms756M -Xmx1g
-  VALUE1: value1
 components:
   - name: xnio
-    org: xnio
-    branch: 3.8
+    org: kabir
+    branch: '3.8'
     mavenOpts: -DskipTests
   - name: jboss-remoting
-    org: jboss-remoting
-    branch: 5.0
+    org: kabir
+    branch: '5.0'
+    mavenOpts: -DskipTests
     dependencies:
       - name: xnio
         property: xnio.version
   - name: wildfly-core
-    org: wildfly
+    org: kabir
     branch: master
     dependencies:
       - name: xnio
@@ -22,8 +22,10 @@ components:
       - name: jboss-remoting
         property: version.org.jboss.remoting
   - name: wildfly
-    org: wildfly
+    org: kabir
     branch: master
     dependencies:
       - name: wildfly-core
         property: version.org.wildfly.core
+
+
