--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,33 +19,36 @@ jobs:
         # The personal access token must be something which has the workflow permissions
         # (I also used repo, admin:repo_hook and user)
         token: ${{ secrets.OB_MULTI_CI_PAT }}
-
-# Cache is not usable with issues events
-#    - uses: actions/cache@v1
-#      with:
-#        path: ~/.m2/repository
-#        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-#        restore-keys: |
-#          ${{ runner.os }}-maven-
-
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
 
+    # Either build the tool with Maven, or download it from the releases
+    # Maven:
+    - uses: actions/checkout@v2
+      with:
+        repository: overbaard/multi-repo-ci
+        path: .ci-tools
     - name: Build with Maven
+      working-directory: .ci-tools
       run: |
+        pwd
+        ls -R .
         mvn -B package
+        echo "::set-env name=TOOL_JAR::.ci-tools/target/multi-repo-ci-tool.jar"
+    # Download
+    # TODO
 
     - name: Create branch
       run: |
         git branch
-        BRANCH=branch-${{ github.event.issue.number }}
+        BRANCH=multi-repo-ci-branch-${{ github.event.issue.number }}
         git checkout -b "${BRANCH}"
         git config --global user.email "ci@example.com"
         git config --global user.name "CI Action"
         echo "${{ github.event.issue.body }}" > config.yml
-        java -jar target/ci-tool.jar --workflow-dir=.github/workflows --yaml=config.yml --issue=${{ github.event.issue.number }} --branch=$BRANCH
+        java -jar ${TOOL_JAR} --workflow-dir=.github/workflows --yaml=config.yml --issue=${{ github.event.issue.number }} --branch=$BRANCH
         git add -A
         git commit -m "Testing file for #${{ github.event.issue.number }} - ${{ github.event.issue.title }}"
         git push --force origin "${BRANCH}"
