--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,21 +26,21 @@ jobs:
 
     # Either build the tool with Maven, or download it from the releases
     # Maven:
-    - uses: actions/checkout@v2
-      with:
-        repository: overbaard/multi-repo-ci
-        path: .ci-tools
-    - name: Build with Maven
-      working-directory: .ci-tools
-      run: |
-        mvn -B package
-        echo "::set-env name=TOOL_JAR::.ci-tools/target/multi-repo-ci-tool.jar"
-        cp target/multi-repo-ci-tool.jar ..
-      # Download
-#    - name: Download multi-repo-ci-tool.jar
+#    - uses: actions/checkout@v2
+#      with:
+#        repository: overbaard/multi-repo-ci
+#        path: .ci-tools
+#    - name: Build with Maven
+#      working-directory: .ci-tools
 #      run: |
-#        wget http://github.com/overbaard/multi-repo-ci/releases/latest/download/multi-repo-ci-tool.jar
-#        echo "::set-env name=TOOL_JAR::multi-repo-ci-tool.jar"
+#        mvn -B package
+#        echo "::set-env name=TOOL_JAR::.ci-tools/target/multi-repo-ci-tool.jar"
+#        cp target/multi-repo-ci-tool.jar ..
+      # Download
+    - name: Download multi-repo-ci-tool.jar
+      run: |
+        wget http://github.com/overbaard/multi-repo-ci/releases/latest/download/multi-repo-ci-tool.jar
+        echo "::set-env name=TOOL_JAR::multi-repo-ci-tool.jar"
 
     - name: Create branch
       run: |
