--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -31,6 +31,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.basic -pl testsuite/integration/basic/,testsuite/integration/ws/
 
@@ -38,6 +39,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.clustering -pl testsuite/integration/clustering/
 
@@ -45,6 +47,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.domain -pl testsuite/domain
 
@@ -52,6 +55,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dinteg.module -Dts.elytron -pl testsuite/integration/elytron
 
@@ -59,6 +63,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.iiop -pl testsuite/integration/iiop
 
@@ -66,6 +71,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.legacy -pl testsuite/integration/legacy
 
@@ -73,6 +79,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.legacy.ejb.client -pl testsuite/integration/legacy-ejb-client
 
@@ -80,6 +87,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.manualmode -pl testsuite/integration/manualmode/
 
@@ -87,6 +95,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.microprofile -rf testsuite/integration/microprofile
 
@@ -94,6 +103,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.multinode -rf testsuite/integration/multinode
 
@@ -101,6 +111,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.rbac -pl testsuite/integration/rbac
 
@@ -108,6 +119,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.rts -pl testsuite/integration/rts
 
@@ -115,6 +127,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.secman -pl testsuite/integration/secman
 
@@ -122,6 +135,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -DallTests -pl testsuite/integration/vdx
 
@@ -129,6 +143,7 @@ jobs:
     needs: [build]
     run:
       # We need to rebuild the dists again, hence the initial install
+      - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
       - mvn: package ${MAVEN_TEST_PARAMS} -Dts.xts -rf testsuite/integration/xts
 
