--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -33,7 +33,8 @@ jobs:
       # We need to rebuild the dists again, hence the initial install
       - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
-      - mvn: package ${MAVEN_TEST_PARAMS} -Dts.basic -pl testsuite/integration/basic/,testsuite/integration/ws/
+      # Increase timeout to see if it helps
+      - mvn: package ${MAVEN_TEST_PARAMS} -Dts.basic -pl testsuite/integration/basic/,testsuite/integration/ws/ -Dts.timeout.factor=300
 
   ts-clustering:
     needs: [build]
@@ -105,7 +106,8 @@ jobs:
       # We need to rebuild the dists again, hence the initial install
       - shell: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
       - mvn: ${MAVEN_TEST_BUILD_DEPS}
-      - mvn: package ${MAVEN_TEST_PARAMS} -Dts.multinode -rf testsuite/integration/multinode
+      # Increase timeout to see if it helps
+      - mvn: package ${MAVEN_TEST_PARAMS} -Dts.multinode -rf testsuite/integration/multinode -Dts.timeout.factor=300
 
   ts-rbac:
     needs: [build]
